[tool.poetry]
name = "deepview-rev"
version = "0.1.0"
description = ""
authors = ["Miguel Alejandro Martín <alu0101209777@ull.edu.es>"]
readme = "README.md"
packages = [{include = "deepview_rev"}]

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.15.0"
numpy = "^1.25.1"
opencv-contrib-python = "^4.8.0.74"
pandas = "^2.0.3"
ipykernel = "^6.24.0"
notebook = "^7.0.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
